Possible scrollbar overflow fix for couriers outbound widget

--- a/ManagerFiles/css/home.css
+++ b/ManagerFiles/css/home.css
@@ -63,8 +63,9 @@
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    overflow: scroll;
-    height: 35vh;
+    overflow: auto;
+    max-height: 35vh;
+    max-width: 90vw;
     padding: 1rem;
 }
 
